--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
            Oggi lavorò per Ariix Corporate  una grande azienda internazionale multibrand, posso decidere dove e come lavorare, per realizzare i miei sogni e no' quelli di qualcun altro. So che ci sarà tanto da lavorare, ma farlo vicino alla mia famiglia mi rende serena e pronta a dedicarmi al 100%. Se sei interessata e ne vuoi saperne di più non esitare a chiedermi, una  semplice curiosità può cambiare la tua vita come sta  succedendo con la mia.</p>
     </section>
     <section class="container3">
-        <h2>Cos'è Ariix Corporate?</h2>
+        <h2>Cosa e Ariix Corporate?</h2>
         <p>Ariix Corporate e una azienda dì multibrand presente in oltre 30 paesi nel   mondo, si occupa dì benessere della persona a 360 gradi, con i suoi 10 brand innovativi  ché hano ottenuto più di 15  certificazioni in Italia e all estero. Ariix si sta espandendo con una velocità incredibili,  conquistando la fiducia di milioni di persone. 
             I prodotti sono tutti completamente naturali,  ed è per quello che il risultato ottenuto con essi è duraturo nel tempo.</p>
             <div class="images">
@@ -72,15 +72,16 @@
             </div>
             <div class="pdfs">
                 <div class="row1">
-                    <p>  <a href="./pdf/ARIIX_prodotti PRIME.pdf">Ariix Prodotti PRIME<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
+                    
                     <p>  <a href="./pdf/JOUVE.pdf">Jouve<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
-                    <p> <a href="./pdf/NUC_Skincerity_Presentation_EU-ITA.pdf">Nuc Skincerity<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
+                    <p> <a href="./pdf/SLENDERIIZ.pdf"> Slenderiiz<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
+                    <p>  <a href="./pdf/PURITII.pdf">Puritii<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
                     <p>  <a href="./pdf/NUTRIFII.pdf">Nutrifii<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
                 </div>
                 <div class="row2">
-                    <p>  <a href="./pdf/PURITII.pdf">Puritii<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
                     <p><a href="./pdf/REVIIVE.pdf"> Revive <img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
-                    <p> <a href="./pdf/SLENDERIIZ.pdf"> Slenderiiz<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
+                    <p> <a href="./pdf/NUC_Skincerity_Presentation_EU-ITA.pdf">Nuc Skincerity<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
+                    <p>  <a href="./pdf/ARIIX_prodotti PRIME.pdf">Ariix Prodotti PRIME<img src="./svg/pdf.svg" style = " width: 100px;" alt=""></a></p>
                 </div>
             </div>
     </section>
