--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./img/105665758_3031473860307692_7454206321440555715_n.jpg" alt="">
                 <div class="text">
                     <h1 class="title">Dana Florea</h1>
-                    <p class="description">Network Marketing presso Ariix Corporte</p>
+                    <p class="description">Network Marketing presso Ariix Corporate</p>
                     <h4 class="phone1">Phone:</h4>
                     <p class="phone">0039-388-5758-071<br>0044-075-888-111-71</br></p>
                     <h4 class="address1">Email:</h4>
@@ -54,11 +54,11 @@
         <p>Ciao tutti sono Dana ho 39 anni e sono una mamma di 3 figli.
             Stanca di lavorare tante ore al giorno con guadagni  minimi e  le prospettive di crescere economicamente non si vedevano ho deciso di cambiare la mia vita.
             Un giorno mi sono svegliata e ho detto BASTA devo migliorare la mia vita e della mia famiglia, devo avere la libertà economica. 
-           Oggi lavorò per Ariix Corporate  una grande azienda internazionale multibrand, posso decidere dove e come lavorare, per realizzare i miei sogni e no' quelli di qualcun altro. So che ci sarà tanto da lavorare, ma farlo vicino alla mia famiglia mi rende serena e pronta a dedicarmi al 100%. Se sei interessata e ne vuoi saperne di più non esitare a chiedermi, una  semplice curiosità può cambiare la tua vita come sta  succedendo con la mia.</p>
+           Oggi lavoro per Ariix Corporate  una grande azienda internazionale multibrand, posso decidere dove e come lavorare, per realizzare i miei sogni e no' quelli di qualcun altro. So che ci sarà tanto da lavorare, ma farlo vicino alla mia famiglia mi rende serena e pronta a dedicarmi al 100%. Se sei interessata e vuoi saperne di più non esitare a chiedermi, una  semplice curiosità può cambiare la tua vita come sta  succedendo con la mia.</p>
     </section>
     <section class="container3">
         <h2>Cosa e Ariix Corporate?</h2>
-        <p>Ariix Corporate e una azienda dì multibrand presente in oltre 30 paesi nel   mondo, si occupa dì benessere della persona a 360 gradi, con i suoi 10 brand innovativi  ché hano ottenuto più di 15  certificazioni in Italia e all estero. Ariix si sta espandendo con una velocità incredibili,  conquistando la fiducia di milioni di persone. 
+        <p>Ariix Corporate e una azienda multibrand presente in oltre 30 paesi nel   mondo, si occupa dì benessere della persona a 360 gradi, con i suoi 10 brand innovativi  ché hano ottenuto più di 15  certificazioni in Italia e all estero. Ariix si sta espandendo con una velocità incredibile,  conquistando la fiducia di milioni di persone. 
             I prodotti sono tutti completamente naturali,  ed è per quello che il risultato ottenuto con essi è duraturo nel tempo.</p>
             <div class="images">
                 <div class="row1">
